feat: add kudzu

--- a/src/main/resources/assets/hanami/lang/en_us.json
+++ b/src/main/resources/assets/hanami/lang/en_us.json
@@ -3,5 +3,6 @@
 	"block.hanami.sunburnt_tatami_slab": "Sunburnt Tatami Slab",
 	"block.hanami.tatami": "Tatami",
 	"block.hanami.tatami_slab": "Tatami Slab",
+	"block.hanami.kudzu": "Kudzu",
 	"itemGroup.hanami": "Hanami"
 }
